--- a/AgronomicsLandingPage.css
+++ b/AgronomicsLandingPage.css
@@ -7,25 +7,32 @@
 }
 nav {
   display: flex;
-  gap: 1rem;
+  /* gap: 1rem; */
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  /* background-color: #47D77C; */
+  font-weight: 500;
 }
 nav div ul {
   display: flex;
-  gap: 2rem;
+  gap: 2.5rem;
   list-style: none;
 }
 nav div ul a {
   text-decoration: none;
   color: black;
 }
+nav div ul a:hover {
+  text-decoration: underline;
+}
 nav div img {
-  width: 190px;
-  padding-left: 12rem;
+  width: 13rem;
+  /* padding-left: 17rem; */
 }
 nav #buttons {
-  margin-right: 18rem;
+  /* margin-right: 17rem; */
 }
 nav div button {
   background-color: #f4f4f5;
@@ -33,15 +40,32 @@ nav div button {
   border: 0;
   border-radius: 7px;
   font-weight: 600;
+  border: 1px solid #e9e9ee;
 }
 main div {
-  max-width: 50%;
-  margin-left: 25%;
+  max-width: 54%;
+  margin-left: 23%;
   /* padding-right:25%; */
   margin-bottom: 2rem;
 }
+main div .gradient {
+  background: linear-gradient(
+    to right,
+    #47d77c,
+    #186a37
+  ); /* Light to dark gradient */
+  background-clip: text;
+  color: transparent;
+}
+main div .headings {
+  font-size: xx-large;
+}
+main div p {
+  color: #71717a;
+  line-height: 1.5rem;
+}
 main #About-Sec {
-  margin-top: 5rem;
+  margin-top: 7rem;
   text-align: center;
 }
 main #About-Sec h1 {
@@ -51,9 +75,12 @@ main div {
   /* background-color: aquamarine; */
 }
 #imageDiv {
-  width: 850px;
-  height: 510px;
-  border-radius: 5px;
+  width: 64.5rem;
+  height: 39.5rem;
+  border-radius: 6px;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
+  box-shadow: 0 -40px 40px #dff2e6;
 }
 footer #footer-section1 img {
   width: 190px;
@@ -64,7 +91,6 @@ footer a {
 }
 footer #footer-section1 {
   width: 60%;
-  display: flex;
   align-items: center;
   justify-content: space-between;
   margin-left: 20%;
@@ -76,52 +102,75 @@ footer #footer-section1 {
 footer ul {
   list-style: none;
 }
-footer #footer-section1 h2{
-    margin-bottom: 3%;
+footer #footer-section1 h2 {
+  margin-bottom: 3%;
 }
-footer #footer-section1 div ul{
-    display: flex;
-    flex-direction:column;
-    gap: 5%;
+footer #footer-section1 div ul {
+  display: flex;
+  flex-direction: column;
 }
-#logo{
-    height: 25px;
-
+#logo {
+  height: 25px;
 }
-footer section{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 2%;
-    margin-bottom: 2%;
-
+footer section {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2%;
+  margin-bottom: 2%;
+  gap: 20%;
 }
-footer section ul{
-    display: flex;
-    gap: 6%;
+footer section ul {
+  display: flex;
+  gap: 6%;
 }
-footer section{
-    width: 60%;
-    margin-left: 20%;
-}
-hr{
-    background-color: 12px solid black;
-}
-main #Modren-Argi-Div{
-    margin-bottom: 5%;
+footer section {
+  width: 60%;
+  margin-left: 20%;
 }
 
-#QuickLinks{
-    margin-left: 25%;
+main #Modren-Argi-Div {
+  margin-bottom: 5%;
 }
-#QuickLinks li{
-    margin-top: 25%;
+main div #AboutAgronomics {
+  font-size: 3.8rem;
 }
-#Contact li{
-    margin-top: 25%;
+.styled-hr {
+  border: none; /* Remove the default border */
+  height: 1px; /* Set the height of the line */
+  background-color: #e4e4e7; /* Set the color of the line */
+  margin: -0.8rem;
 }
-#helpList{
-    margin-bottom: 62%;
-}    
+footer .styled-hr {
+  border: none; /* Remove the default border */
+  height: 1px; /* Set the height of the line */
+  width: 70%;
+  background-color: black;
+  margin-left: 15%;
+}
+footer section a,
+li {
+  font-size: 0.9rem;
+  font-weight: 500;
+}
+footer section a:hover {
+  text-decoration: underline;
+}
 
-
-
+footer #section1 {
+  display: grid;
+  grid-template-columns: auto 1.5fr 1fr 1fr 1fr;
+  gap: 3%;
+  padding: 2% 0;
+}
+footer #section1 img {
+  width: 13rem;
+}
+footer #section1 h2 {
+  font-size: 1.1rem;
+  margin-bottom: 1rem;
+}
+footer #section1 ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
