--- a/AgronomicsLandingPage.css
+++ b/AgronomicsLandingPage.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   font-family: "Inter", sans-serif;
+
 }
 nav {
   display: flex;
@@ -39,10 +40,14 @@ nav div button {
   font-weight: 600;
   border: 1px solid #e9e9ee;
 }
+main{
+  display: flex;
+  flex-direction: column;
+}
 main div {
+  /* width: 100%; */
   max-width: 54%;
-  margin-left: 23%;
-  /* padding-right:25%; */
+  padding: 0 23%;
   margin-bottom: 2rem;
 }
 main div .gradient {
@@ -70,12 +75,15 @@ main #About-Sec h1 {
 }
 
 #imageDiv {
-  width: 64.5rem;
-  height: 39.5rem;
+  width: 1200px;
+  max-width: 100%;
+  height: auto;
+  max-height: 39.5rem;
   border-radius: 6px;
   margin-top: 3.5rem;
   margin-bottom: 3.5rem;
   box-shadow: 0 -40px 40px #dff2e6;
+
 }
 footer #footer-section1 img {
   width: 190px;
@@ -169,4 +177,13 @@ footer #section1 ul {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+@media screen and (max-width:960px ){
+  main div{
+    max-width: 100%;
+    padding: 0 0;
+    margin: 2%;
+  }
+  
 }
