--- a/AgronomicsLandingPage.css
+++ b/AgronomicsLandingPage.css
@@ -4,7 +4,6 @@
   padding: 0;
   margin: 0;
   font-family: "Inter", sans-serif;
-
 }
 nav {
   display: flex;
@@ -40,7 +39,10 @@ nav div button {
   font-weight: 600;
   border: 1px solid #e9e9ee;
 }
-main{
+nav #drawerImageDiv{
+  display: none;
+}
+main {
   display: flex;
   flex-direction: column;
 }
@@ -83,7 +85,6 @@ main #About-Sec h1 {
   margin-top: 3.5rem;
   margin-bottom: 3.5rem;
   box-shadow: 0 -40px 40px #dff2e6;
-
 }
 footer #footer-section1 img {
   width: 190px;
@@ -179,11 +180,162 @@ footer #section1 ul {
   gap: 1rem;
 }
 
-@media screen and (max-width:960px ){
-  main div{
+@media screen and (min-width: 768px) and (max-width: 960px) {
+  main div {
     max-width: 100%;
     padding: 0 0;
-    margin: 2%;
+    padding: 2%;
+  }
+  main p,h1,h2,h3,h4,h5,h6{
+    text-align: left;
+  }
+
+  .item1 {
+    grid-area: logo;
+  }
+  .item2 {
+    grid-area: empty;
+  }
+  .item3 {
+    grid-area: QuickLinks;
+  }
+  .item4 {
+    grid-area: Help;
+  }
+  .item5 {
+    grid-area: Contact;  
+  }
+  footer #section1 {
+    grid-template-areas:
+      "logo logo empty empty empty empty  "
+      "QuickLinks QuickLinks Help Help Contact Contact ";
+  }
+  footer section {
+    max-width: 100%;
+    margin-left: 3;
+  }
+  .navItem1 {
+    grid-area: Logo;
+  }
+  .navItem2 {
+    grid-area: links;
+    display: flex;
+    justify-content: center;
+    padding: 2% 0;
+
+  }
+  .navItem3 {
+    grid-area: buttons;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+  }
+
+  nav {
+    display: grid;
+    grid-template-areas:
+      "Logo buttons "
+      "links links";
+  }
+  .styled-hr{
+    margin-top: 1%;
+  }
+  nav div button{
+    padding: 3% 0;
+  }
+
+  footer #lastHr{
+    margin-top: 4%;
+    margin-bottom: 4%;
+  }
+}
+
+@media screen and (max-width: 767px){
+  body ,nav, main, footer, section ,p, div, hr {
+    max-width :100%;
+  }
+  nav #drawerImageDiv{
+    display: block;
+  }
+  nav .navItem2, .navItem3{
+    display: none;
+  }
+  nav{
+    justify-content: space-between;
+    padding: 0 4%;
+  }
+ 
+  main #About-Sec, #Modren-Argi-Div, #Competence, #farmImageDiv{
+    width: 100%;
+    max-width: 100%;
+    align-content: start;
+    justify-content: start;
+    padding: 0;
+    font-size: small;
+  }
+  main p{
+    padding: 1rem;
+    text-align: left;
+  }
+  main h2{
+    padding: 1rem;
+    text-align: left;
+    font-size: 10px;
+  }
+  main  #farmImageDiv{
+    width: 100%;
+    max-width: 95%;
+    margin:0 auto;
   }
   
+  main #AboutAgronomics{
+    font-size: 0.11em;
+  }
+  footer{
+    width: 100%;
+    max-width: 100%;
+    /* background-color: black; */
+    align-items: center;
+  }
+  .item1 {
+    grid-area: logo;
+  }
+  .item2 {
+    grid-area: empty;
+  }
+  .item3 {
+    grid-area: QuickLinks;
+  }
+  .item4 {
+    grid-area: Help;
+  }
+  .item5 {
+    grid-area: Contact;  
+  }
+  footer #section1 {
+    grid-template-areas:
+      "logo logo logo logo logo logo  "
+      "QuickLinks QuickLinks  QuickLinks Help Help Help"
+      " Contact Contact Contact Contact Contact Contact ";
+      padding: 0;
+      /* background-color: #47d77c; */
+  }
+  footer #lastHr{
+    margin-top: 13%;
+    margin-bottom: 4%;
+  }
+
+  footer #section2{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 5%;
+    gap: 0.5rem;
+  }
+  footer #section2 p{
+    text-align: center;
+  }
 }
+
+
