--- a/AgronomicsLandingPage.css
+++ b/AgronomicsLandingPage.css
@@ -264,6 +264,9 @@ footer #section1 ul {
     justify-content: space-between;
     padding: 0 4%;
   }
+  nav div img {
+    width: 11rem;
+  }
  
   main #About-Sec, #Modren-Argi-Div, #Competence, #farmImageDiv{
     width: 100%;
@@ -277,15 +280,27 @@ footer #section1 ul {
     padding: 1rem;
     text-align: left;
   }
-  main h2{
-    padding: 1rem;
+  main h2,h1{
+    padding-left: 1rem;
     text-align: left;
-    font-size: 10px;
+    font-size: 2rem !important;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  main h1{
+    margin-top: -4rem ;
+    margin-bottom: 0 !important;
+  }
+  main div p{
+    padding-top: 0.5rem;
+    padding-bottom: 1rem;
   }
   main  #farmImageDiv{
     width: 100%;
     max-width: 95%;
-    margin:0 auto;
+    margin: 0 auto;
+    margin-top: -5em;
+    padding-top: 0;
   }
   
   main #AboutAgronomics{
@@ -299,6 +314,7 @@ footer #section1 ul {
   }
   .item1 {
     grid-area: logo;
+    
   }
   .item2 {
     grid-area: empty;
@@ -311,15 +327,20 @@ footer #section1 ul {
   }
   .item5 {
     grid-area: Contact;  
-  }
+    padding-top: 1rem;
+     }
   footer #section1 {
     grid-template-areas:
       "logo logo logo logo logo logo  "
       "QuickLinks QuickLinks  QuickLinks Help Help Help"
       " Contact Contact Contact Contact Contact Contact ";
-      padding: 0;
-      /* background-color: #47d77c; */
   }
+  /* footer #section1 div{
+    margin: 0 auto;
+  }
+  footer #section1 .item5{
+    padding-left: auto;
+  } */
   footer #lastHr{
     margin-top: 13%;
     margin-bottom: 4%;
@@ -335,6 +356,18 @@ footer #section1 ul {
   }
   footer #section2 p{
     text-align: center;
+  }
+  footer #mobileFooterLogo  {
+  width: 11rem !important; 
+  }
+  footer #section1 li{
+    font-size: 0.7rem;
+  }
+  footer #section1 a{
+    font-size: 0.7rem;
+  }
+  footer #section1 h2{
+    font-size: 1rem;
   }
 }
 
